Suppress spurious foreground/background notifications

WebContentsObserver::WasShown/WasHidden can be invoked for WebContents that are already in that state.

This can cause us to track first foreground/background time incorrectly.

This change suppresses shown/hidden notifications when we're already in that state, so our first fg/bg time tracking works correctly.

BUG=590476

Review URL: https://codereview.chromium.org/1740403002

Cr-Commit-Position: refs/heads/master@{#378212}

Former-commit-id: 8de43b1b18151fd3428cb9812a95254e36770f84